  now have equivalents in QtGui, along with the naming change QGL -> QOpenGL.
  The classes in QtOpenGL that have equivalents in QtGui can now be considered
  deprecated.

QtScript
--------


QTestLib
--------
* [QTBUG-20615] Autotests can now log test output to multiple destinations
  and log formats simultaneously.

QtSql
-----
QSqlTableModel/QSqlRelationalTableModel

* The dataChanged() signal is now emitted for changes made to an inserted
record that has not yet been committed. Previously, dataChanged() was
suppressed in this case for OnRowChange and OnFieldChange. This was probably
an attempt to avoid trouble if setData() was called while handling
primeInsert(). By emitting dataChanged(), we ensure that all views are aware
of the change.

* While handling primeInsert() signal, the record must be manipulated using
the provided reference. Do not attempt to manipulate the records using the
model methods setData() or setRecord().

* removeRows() no longer emits extra beforeDelete signal for out of range row.

* removeRows() now requires the whole range of targetted rows to be valid
before doing anything. Previously, it would remove what it could and
ignore the rest of the range.

* removeRows(), for OnFieldChange and OnRowChange, allows only 1 row to be
removed and only if there are no other changed rows.

* setRecord() and insertRecord()
  -Only use fields where generated flag is set to true. This is
  is consistent with the meaning of the flag.
  -Require all fields to map correctly. Previously fields that didn't
  map were simply ignored.
  -For OnManualSubmit, insertRecord() no longer leaves behind an empty
  row if setRecord() fails.
  -setRecord() now automatically submits for OnRowChange.

* QSqlQueryModel::indexInQuery() is now virtual. See
QSqlTableModel::indexInQuery() as example of how to implement in a
subclass.

* QSqlTableModel::selectRow(): This is a new method that refreshes a single
row in the model from the database.
